<resources>
    <string name="app_name">Cardio Capacity</string>

    <!--Welcome: first about page-->
    <string name="about_header">Welcome to RPP Demonstration App</string>>
    <string name="about_contents1">A demonstration application providing Rate Pressure Product (RPP) information and related services to the client.</string>
    <string name="about_contents2">
        Contents include brief background of blood pressure (BP), heart rate (HR), and rate pressure product (RPP).
        Based on the values of RPP, the app suggests personalized and optimal workout routine. </string>
    <string name="about_contents3">The app consists of four parts: introduction, calibration, rpp measurement, and exercise suggestion.</string>
    <string name="about_signature">By Jieun Ashley Lee of New Device Lab</string>

    <!--Welcome: second BP and HR page-->
    <string name="welcome_second_header">Blood Pressure and HR</string>
    <string name="welcome_second_content1">What is BP and HR?</string>
    <string name="welcome_second_content2">Blood Pressure (BP) and Heart Rate (HR) are the two most commonly used vital signs.</string>
    <string name="welcome_second_content3">
        BP is the pressure exerted by the blood upon the walls of the blood vessels, indicated as SBP / DBP.</string>
    <string name="welcome_second_content4">
        Systolic BP (SBP) is the maximum BP when heart pushes the blood around the body, and Diastolic BP (DBP) is the minimum BP when heart rests between the beat.
        Normal BP is around 120/90; above is considered hypertensive and below is considered as hypotensive</string>
    <string name="welcome_second_content5">HR is the number of times your heart beats per minute. Normal resting HR ranges between 60 and 100.</string>
    <string name="welcome_second_content6">Why is it so important to monitor your BP?</string>
    <string name="welcome_second_content7">
        Hypertension, often referred to as the Silent Killer, is the most common cardiovascular disease in America.
        It can be easily induced by various daily activities, such as caffeine, alcohol, stress, and salty foods.</string>
    <string name="welcome_second_content8">
        However, keeping up with BP is not easy for many people, especially for those living busy lives.
        The reliability of the BP measurements at hospitals is often compromised by the White Coat Effect.
        Hence, constant and frequent monitoring using smartphones will benefit many.</string>

    <!--Welcome: third RPP page-->
    <string name="welcome_third_header">Rate Pressure Product</string>
    <string name="welcome_third_content1">Knowing BP is Not Enough</string>
    <string name="welcome_third_content2">The impact of simple measurement is limited without personalized follow-up treatment.</string>
    <string name="welcome_third_content3">
        After all, the purpose of constant BP measurement implemented in smartphones is to provide more comprehensive health care at anywhere at anytime.
        Moreover, the technology should not only help patients suffering from hypertension, but also benefit all people, those whose BP is currently in a normal range.</string>
    <string name="welcome_third_content4">Why RPP?</string>
    <string name="welcome_third_content5">Rate Pressure Product (RPP) is SBP X HR. </string>
    <string name="welcome_third_content6">Traditionally, RPP is used as an index of myocardial O2 consumption, meaning it can measure the energy and O2 demand of heart.
        Hence, it is a good indicator examining the cardiac function, especially when the energy demand is high.</string>
    <string name="welcome_third_content7">
        Like in many journals, RPP is calculated as (SBP X HR)/1000 in this app.
        Such calculation minimizes the error range of BP measurement, and also removes the need to show BP values directly.</string>

    <!--Welcome: fourth RPP Service page-->
    <string name="welcome_fourth_header">Cardio Capacity</string>
    <string name="welcome_fourth_content1">RPP as Cardio Capacity</string>
    <string name="welcome_fourth_content2">
        Previously, there were attempts to measure physical stress only based on HR. However, without information about BP, measuring stress solely based on HR is clearly limited.
        On the other hand,  Cardio Capacity based on RPP can effectively show the degree of physical stress and exercise intensity.</string>
    <string name="welcome_fourth_content3">Personal Trainer on Every Smartphone</string>
    <string name="welcome_fourth_content4">
        Exercise is not only important for keeping BP in a desirable level, but also for living a fit and healthy life. Everyone has exercise capacity and it is often difficult to find the most optimal work-out routine.
        With Cardio Capacity measured during exercise and recovery, the values can be used to determine the exercise intensity.
        Ultimately, it can be used to suggest different exercises to try out in the future. With time, the clients will be able to build up an optimal work-out routine.</string>
    <string name="welcome_fourth_content5">How does it work?</string>
    <string name="welcome_fourth_content6">
        Exercise Intensity can be divided into 4 levels; Normal (~12), Risk (13~17), Danger (18~21), and Very Danger (21~). If it is normal, exercise of same or slightly higher intensity will be suggested.
        If at Risk, exercise of the same or slightly lower intensity will be suggested. If it is in Danger or Very Danger zone, exercise of lower intensity will be suggested.</string>

    <!--Calibration Screen-->
    <string name="cal_header">User Calibration</string>
    <string name="cal_Reference">Reference</string>
    <string name="cal_button">Calibrate</string>
    <string name="cal_button_done">Done</string>
    <string name="skpcal_button">Skip Calibrate</string>

    <!--Measurement Screen-->
    <string name="divider">This is a content divider</string>
    <string name="heart_icon">This is a heart icon</string>
    <string name="cc_icon">This is a pulse icon</string>
    <string name="exercise_icon">This is a exerise icon</string>
    <string name="connect">View Exercise Suggestions</string>
    <string name="main_page_title">Measure Cardio Capacity</string>
    <string name="heart_rate_label">Heart Rate: </string>
    <string name="heart_rate"> </string>
    <string name="cc_label">Cardio Capacity: </string>
    <string name="cc"> </string>
    <string name="cc_summary">Please Measure Cardio Capacity</string>
    <string name="measure_button">Measure CC</string>
    <string name="cc_result_button">View CC Analysis</string>

    <!--Exercise Screen-->
    <string name="exercise_page_title">Personalized Exercise Suggestion</string>
    <string name="average_heart_rate_label">Average HR: </string>
    <string name="average_heart_rate"> </string>
    <string name="average_cc_label">Average CC: </string>
    <string name="average_cc"> </string>
    <string name="exercise_label">Exercise Intensity: </string>
    <string name="exercise"> </string>
    <string name="suggestion_default">Please measure your Cardio Capacity</string>
    <string name="suggestion_normal">You can try out more demanding exercises</string>
    <string name="suggestion_risk">You can try out exercises of same or less intensity</string>
    <string name="suggestion_danger">You can try out exercises of same or less intensity</string>
    <string name="suggestion_vdanger">Your workout may have put too much constraint on your heart. Try less intense exercises</string>
    <string name="previous">Measure CC</string>
    <string name="more">MORE</string>
    <string name="aerobic">Aerobic/Cardio Exercises</string>
    <string name="anaerobic">Anaerobic Exercises</string>

    <!--Additional Page-->
    <string name="additional_title">In the future</string>
    <string name="additional_texthead1">Combining All Values</string>
    <string name="additional_textbody1">With full information about the users, such as BMI, VO2, etc., we can deliver more comprehensive analysis of their Cardio Capacity.</string>
    <string name="additional_texthead2">The Ultimate Fitness Solution</string>
    <string name="additional_textbody21">With more data and case studies, can provide more diverse and appropriate exercises. For example, by allowing the users to input what exercise they have been doing, the feedback can be more relevant</string>
    <string name="additional_textbody22">Just like a PT, the service can design full workout routine optimized for each user. Exercise Suggestion can depend on the goal of the user (i.e. losing weight, building muscle, etc.).</string>

</resources>
