<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:id="@+id/exercise_suggestion_activity_view">

    <!--TITLE-->
    <TextView
        android:id="@+id/page_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_page_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp" />

    <ImageView
        android:id="@+id/divider"
        android:contentDescription="@string/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scaleType="center"
        android:layout_below="@id/page_label"
        android:src="@drawable/divider" />

    <!--HR-->
    <ImageView
        android:id="@+id/heart_rate_icon"
        android:contentDescription="@string/heart_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_heart"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_below="@id/divider"
        android:layout_marginTop="8dp" />
    <TextView
        android:id="@+id/heart_rate_label"
        android:text="@string/average_heart_rate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/heart_rate_icon"
        android:layout_toRightOf="@id/heart_rate_icon"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_alignTop="@id/heart_rate_icon"
        android:textSize="16sp" />
    <TextView
        android:text="@string/average_heart_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_alignBaseline="@id/heart_rate_label"
        android:layout_toRightOf="@id/heart_rate_label"
        android:layout_toEndOf="@id/heart_rate_label"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/avg_heart_rate" />

    <!--RPP-->
    <ImageView
        android:contentDescription="@string/rpp_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_pulse"
        android:layout_alignStart="@id/heart_rate_icon"
        android:layout_alignLeft="@id/heart_rate_icon"
        android:id="@+id/rpp_icon"
        android:layout_below="@id/heart_rate_icon"
        android:layout_marginTop="8dp" />
    <TextView
        android:id="@+id/rpp_label"
        android:text="@string/average_rpp_label"
        android:layout_alignStart="@id/heart_rate_label"
        android:layout_alignLeft="@id/heart_rate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/rpp_icon"
        android:textSize="16sp" />
    <TextView
        android:text="@string/average_rpp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_alignBaseline="@id/rpp_label"
        android:layout_toRightOf="@id/rpp_label"
        android:layout_toEndOf="@id/rpp_label"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/avg_rpp" />

    <!--EXERCISE-->
    <ImageView
        android:contentDescription="@string/exercise_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_run"
        android:layout_alignStart="@id/heart_rate_icon"
        android:layout_alignLeft="@id/heart_rate_icon"
        android:layout_below="@id/rpp_icon"
        android:layout_marginTop="8dp"
        android:id="@+id/exercise_icon"/>
    <TextView
        android:text="@string/exercise_label"
        android:id="@+id/exercise_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/rpp_label"
        android:layout_alignStart="@id/rpp_label"
        android:layout_alignTop="@id/exercise_icon"
        android:textSize="16sp" />
    <TextView
        android:text="@string/exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_alignBaseline="@id/exercise_label"
        android:layout_toRightOf="@id/exercise_label"
        android:layout_toEndOf="@id/exercise_label"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/exercise_summary" />

    <ImageView
        android:id="@+id/divider2"
        android:contentDescription="@string/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scaleType="center"
        android:layout_below="@id/exercise_icon"
        android:src="@drawable/divider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider2"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="80dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView style="?android:textAppearanceMedium"
                android:id="@+id/suggestion_sum"
                android:text="@string/suggestion_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider2"
                android:layout_marginTop="16dp"
                android:textSize="16sp"/>

            <TextView style="?android:textAppearanceMedium"
                android:id="@+id/suggest_ah"
                android:text="@string/aerobic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/suggestion_sum"
                android:layout_marginTop="24dp"
                android:textSize="24sp"/>

            <WebView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/suggest_ah"
                android:layout_marginTop="16dp"
                android:id="@+id/suggest_at"/>

            <TextView style="?android:textAppearanceMedium"
                android:id="@+id/suggest_anh"
                android:text="@string/anaerobic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/suggest_at"
                android:layout_marginTop="24dp"
                android:textSize="24sp"/>

            <WebView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/suggest_ah"
                android:layout_marginTop="16dp"
                android:id="@+id/suggest_ant"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/previous_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/previous"
        android:onClick="toPrevious"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        />

    <Button
        android:id="@+id/more_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/more"
        android:onClick="toMore"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="24dp"
        />

</RelativeLayout>
