<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome_second_header"
        android:text="@string/welcome_second_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="32sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/primary"/>

    <TextView style="?android:textAppearanceMedium"
        android:id="@+id/welcome_second_content1"
        android:text="@string/welcome_second_content1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_below="@id/welcome_second_header"
        android:layout_alignStart="@id/welcome_second_header"
        android:layout_alignLeft="@id/welcome_second_header"
        android:layout_marginEnd="24dp" />

    <TextView style="?android:textAppearanceMedium"
        android:id="@+id/welcome_second_content2"
        android:text="@string/welcome_second_content2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_second_content1"
        android:layout_alignStart="@id/welcome_second_header"
        android:layout_alignLeft="@id/welcome_second_header"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"/>

    <TextView style="?android:textAppearanceMedium"
        android:id="@+id/welcome_second_content3"
        android:text="@string/welcome_second_content3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_second_content2"
        android:layout_alignStart="@id/welcome_second_header"
        android:layout_alignLeft="@id/welcome_second_header"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"/>

</RelativeLayout>
