<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_activity_view">

    <!--TITLE-->
    <TextView
        android:id="@+id/cal_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal_header"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp" />

    <ImageView
        android:id="@+id/divider"
        android:contentDescription="@string/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scaleType="center"
        android:layout_below="@id/cal_label"
        android:src="@drawable/divider" />

    <EditText
        android:id="@+id/name_input"
        android:inputType="textPersonName"
        android:hint="Name"
        android:ems="7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginTop="16dp"
        android:layout_alignStart="@id/cal_label"/>

    <EditText
        android:id="@+id/sbp_input"
        android:inputType="number"
        android:hint="SBP"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_input"
        android:layout_alignStart="@id/name_input"/>

    <TextView
        android:id="@+id/slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_input"
        android:layout_toRightOf="@id/sbp_input"
        android:text=" / "
        android:textSize="32sp"/>

    <EditText
        android:id="@+id/dbp_input"
        android:inputType="number"
        android:hint="DBP"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_input"
        android:layout_toRightOf="@id/slash" />

    <EditText
        android:id="@+id/hr_input"
        android:inputType="number"
        android:hint="HR"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dbp_input"
        android:layout_alignStart="@id/sbp_input"/>

    <Button
        android:id="@+id/cal_button"
        android:text="@string/cal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="calibrate"
        android:layout_toStartOf="@+id/measure_button" />

    <ProgressBar
        android:id="@+id/progressBarCal"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cal_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp" />

    <!--<Button-->
        <!--android:id="@+id/skip_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignBottom="@+id/divider"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_marginEnd="10dp"-->
        <!--android:background="@null"-->
        <!--android:text="Skip" -->
        <!--android:onClick="skipToMain"/>-->

</RelativeLayout>
